tests/memgraph-sandbox/networkpolicy-block-pod-2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-memgraph-sandbox-2
  namespace: memgraph
spec:
  podSelector:
    matchLabels:
      statefulset.kubernetes.io/pod-name: memgraph-sandbox-2
  policyTypes:
  - Ingress
  - Egress
  ingress: []  # Empty list blocks all ingress traffic
  egress: []   # Empty list blocks all egress traffic
